apps/istio-resource/templates/keep-alive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
spec:
  metadata:
    name: gateway-keep-alive-filter
  configPatches:
    - applyTo: LISTENER
      match:
        context: GATEWAY
        listener:
          name: 0.0.0.0_8084
          portNumber: 8084
      patch:
        operation: MERGE
        value:
          socket_options:
            - description: enable keep-alive
              int_value: 1
              level: 1
              name: 9
              state: STATE_PREBIND
            - description: idle time before first keep-alive probe is sent
              int_value: 7
              level: 6
              name: 4
              state: STATE_PREBIND
            - description: keep-alive interval
              int_value: 5
              level: 6
              name: 5
              state: STATE_PREBIND
            - description: keep-alive probes count
              int_value: 2
              level: 6
              name: 6
              state: STATE_PREBIND
