apps/istio-resource/templates/ratelimit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
 name: filter-local-ratelimit-svc
 namespace: istio-system
spec:
 workloadSelector:
   labels:
     type: be
 configPatches:
   - applyTo: HTTP_FILTER
     match:
       context: SIDECAR_INBOUND
       listener:
         filterChain:
           filter:
             name: "envoy.filters.network.http_connection_manager"
     patch:
       operation: INSERT_BEFORE
       value:
         name: envoy.filters.http.local_ratelimit
         typed_config:
           "@type": type.googleapis.com/udpa.type.v1.TypedStruct
           type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
           value:
             stat_prefix: http_local_rate_limiter
             token_bucket:
               max_tokens: 100
               tokens_per_fill: 30
               fill_interval: 10s
             filter_enabled:
               runtime_key: local_rate_limit_enabled
               default_value:
                 numerator: 100
                 denominator: HUNDRED
             filter_enforced:
               runtime_key: local_rate_limit_enforced
               default_value:
                 numerator: 100
                 denominator: HUNDRED
             response_headers_to_add:
               - append_action: OVERWRITE_IF_EXISTS_OR_ADD
                 header:
                   key: x-local-rate-limit
                   value: 'true'
